# Nexus

./: .env.example  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: __init__.py  config.py  main.py
backend/agents/: __init__.py  base.py  critic.py  memory_agent.py  planner.py  research.py  writer.py
backend/api/: __init__.py
backend/api/routes/: __init__.py  monitoring.py  observability.py  projects.py  workflows.py
backend/db/: __init__.py  checkpointer.py  connection.py
backend/db/migrations/: 001_initial.sql  002_phase2_statuses.sql  002_vector_memory.sql  003_observability.sql  003_phase4_statuses.sql  004_phase5_statuses.sql
backend/graphs/: __init__.py  research_graph.py
backend/memory/: __init__.py  chunker.py  embeddings.py  store.py
backend/monitoring/: __init__.py  scheduler.py
backend/observability/: __init__.py  cost_estimator.py  token_tracker.py
backend/schemas/: __init__.py  api.py  workflow.py
backend/tasks/: __init__.py  background_runner.py
backend/tests/: test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py
docs/phases/: AI_OS_Project_Overview.docx  phase-1-foundation.md  phase-2-planner-research-approval.md  phase-3-persistent-memory.md  phase-4-critic-structured-reports.md  phase-5-background-observability-monitoring.md  phase-6-production-demo.md
evaluation/: __init__.py  langsmith_evals.py
evaluation/datasets/: critic_dataset.json  planner_dataset.json
frontend/: api_client.py  app.py  dashboard.py
frontend/pages/: 1_Workflows.py  2_Dashboard.py  3_Monitoring.py  4_Memory.py
middleware/: __init__.py  rate_limiter.py  request_queue.py
scripts/: load_test.py
workflows/: __init__.py  common.py  competitor_analysis.py  market_research.py  trend_monitor.py
