[project]
name = "nexus"
version = "0.1.0"
description = "Phase 1 foundation for the Nexus AI Operating System."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg==0.30.0",
    "fastapi==0.115.12",
    "httpx==0.28.1",
    "langgraph==0.3.34",
    "langsmith==0.3.31",
    "pydantic==2.11.3",
    "pydantic-settings==2.9.1",
    "python-dotenv==1.1.0",
    "streamlit==1.44.1",
    "uvicorn[standard]==0.34.2",
]

[dependency-groups]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
