[project]
name = "nexus"
version = "0.1.0"
description = "AI Operating System for knowledge work."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.11.18",
    "apscheduler[asyncio]==3.11.0",
    "asyncpg==0.30.0",
    "beautifulsoup4==4.13.4",
    "fastapi==0.115.12",
    "httpx==0.28.1",
    "langgraph-checkpoint-postgres==2.0.21",
    "langgraph==0.3.34",
    "langsmith==0.3.31",
    "lxml==5.4.0",
    "numpy==2.2.5",
    "openai==1.93.0",
    "pgvector==0.4.1",
    "playwright==1.52.0",
    "prometheus-client==0.21.1",
    "psycopg[binary,pool]==3.2.9",
    "pydantic==2.11.3",
    "pydantic-settings==2.9.1",
    "python-dotenv==1.1.0",
    "rich==13.9.4",
    "sentence-transformers==4.1.0",
    "streamlit==1.44.1",
    "tavily-python==0.7.2",
    "tiktoken==0.9.0",
    "uvicorn[standard]==0.34.2",
]

[dependency-groups]
dev = [
    "mypy==1.14.1",
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
    "ruff==0.8.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["backend/tests"]
